--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
 					<span>
 						<span class="muse-itc">NO</span> blanco 
 					</span>
-					<span class="lil-circle blanco"></span> 
+					<!--span class="lil-circle blanco"></span--> 
 				</p>
 				<p>
 					<span>
 						<span class="muse-itc">NO</span> verde 
 					</span>
-					<span class="lil-circle verde"></span>
+					<!--span class="lil-circle verde"></span-->
 				</p>
 			</div>
 		</div>
